Cria modais de login e registro

--- a/index.html
+++ b/index.html
@@ -28,11 +28,85 @@
           <li><a href="#" class="nav-option" id="nav-login" class="btn btn-primary" data-toggle="modal"
               data-target="#login-modal">Entrar</a></li>
           <li><a href="#" class="nav-option nav-signup" class="btn btn-primary" data-toggle="modal"
-              data-target="#login-modal">Cadastre-se</a></li>
+              data-target="#signup-modal">Cadastre-se</a></li>
         </ul>
       </div>
     </div>
   </header>
+
+  <!-- Signup Modal -->
+  <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="login-modalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="login-modalLabel">Cadastre-se</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body login-modal-body">
+          <button class="login-modal__button">
+            <i class="far fa-envelope"></i>
+            <p>Continuar com email</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-facebook"></i>
+            <p>Continuar com Facebook</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-google"></i>
+            <p>Continuar com Google</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-apple"></i>
+            <p>Continuar com Apple</p>
+          </button>
+        </div>
+        <div class="modal-footer">
+          <p>Já tem uma conta? <a href="#">Entrar</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!-- Login Modal -->
+  <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="login-modalLabel">Entrar</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body login-modal-body">
+          <button class="login-modal__button">
+            <i class="far fa-envelope"></i>
+            <p>Continuar com email</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-facebook"></i>
+            <p>Continuar com Facebook</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-google"></i>
+            <p>Continuar com Google</p>
+          </button>
+          <button class="login-modal__button">
+            <i class="fab fa-apple"></i>
+            <p>Continuar com Apple</p>
+          </button>
+        </div>
+        <div class="modal-footer">
+          <p>Ainda não tem uma conta? <a href="#">Cadastre-se</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
   <!--            BOOTSTRAP                -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
