Adiciona barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
     </div>
   </header>
 
+  <div class="container-fluid" id="main-container">
+    <ul class="experiences-menu">
+      <li><a href="#" class="experience-item experience-item--active">Lugares para
+          ficar</a>
+      </li>
+      <li><a href="#" class="experience-item">Estadias longas</a></li>
+      <li><a href="#" class="experience-item">Experiências</a></li>
+      <li><a href="#" class="experience-item">Experiências Online</a></li>
+    </ul>
+    <div class="search-bar" id="search-bar">
+      <a href="#" class="search-bar-info">
+        <p>LOCALIZAÇÃO</p>
+        <input type="text" name="" id="search-input" placeholder="Para onde você vai?">
+      </a>
+      <a href="#" class="search-bar-button"><i class="fas fa-search"></i> Buscar</a>
+    </div>
+  </div>
+
   <!-- Signup Modal -->
   <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="login-modalLabel"
     aria-hidden="true">
