--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
   </div>
   </div>
 
+  <script src="static/js/main.js"></script>
+
   <!--            BOOTSTRAP                -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
