Carrega quartos a partir da API

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       </a>
       <a href="#" class="search-bar-button"><i class="fas fa-search"></i> Buscar</a>
     </div>
+    <div class="row">
+      <div class="col-md-12 rooms" id="rooms">
+        <!-- Rooms are going to be inserted here via script -->
+      </div>
+    </div>
   </div>
 
   <!-- Signup Modal -->
@@ -126,7 +131,7 @@
   </div>
   </div>
 
-  <script src="static/js/main.js"></script>
+  <script type="module" src="static/js/main.js"></script>
 
   <!--            BOOTSTRAP                -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
