--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="static/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <title>Airbnb</title>
 </head>
 
@@ -60,6 +61,17 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <div class="footer-content">
+      <p class="footer__text">Desenvolvido por <b>Samuel Cardoso</b></p>
+      <p class="footer__disclaimer">Nenhum vínculo com Airbnb</p>
+      <div class="footer__social">
+        <a target="_blank" href="https://github.com/kardoso"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/sscardoso/"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+  </footer>
 
   <!-- Signup Modal -->
   <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="login-modalLabel"
